--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -6,11 +6,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">    
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <title>Document</title>
+
+
+<!--FullCalendar
+    <link rel="stylesheet" type="text/css" href="../fullcalendar.css">
+    <script src="../lib/moment.min.js"></script>
+    <script src="../lib/jquery.min.js"></script>
+    <script src="../fullcalendar.min.js"></script>
+    <script src="../gcal.min.js"></script>
+    <script src="../lang/ja.js"></script>
+    <script src='../locale/ja.js'></script>
+
+    <script>
+        $(document).ready(function() {
+          $('#calendar').fullCalendar({
+            header: {
+              left: 'prev,next today',
+              center: 'title',
+              right: 'month,listYear'
+            },
+            displayEventTime: false, 
+            googleCalendarApiKey: 'AIzaSyBbYl7E2sn2VO9NxYB3o5OSaph4k7pz44A',
+            events: 'oarve2nmojec3iiv566768g188@group.calendar.google.com',
+            eventClick: function(event) {
+              // opens events in a popup window
+              window.open(event.url, 'gcalevent', 'width=700,height=600');
+              return false;
+            },
+            loading: function(bool) {
+              $('#loading').toggle(bool);
+            }
+          });
+        });
+      </script>
+
+    -->
+      
+
+
+
+    <title>Stagement</title>
 </head>
 <body>
     <main>
